ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-paritosh-webapp
  namespace: web-app
spec:
  ingressClassName: nginx
  rules:
    - host: paritosh.webapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
